# Numerical-methods

./: .gitignore  CMakeLists.txt  README.md  main.cpp
lab1-Progonka/: CMakeLists.txt  Progonka.h  test.cpp  test.txt
lab10-differentiation/: CMakeLists.txt  differentiation.h  test.cpp
lab11-integration/: CMakeLists.txt  integration.h  test.cpp
lab12-methods_of_the_Causy_problem/: CMakeLists.txt  Causy_problem.h  test.cpp
lab2-Gaus/: CMakeLists.txt  Gaus.h  test.cpp  test.txt
lab3-simple_iteration_method/: CMakeLists.txt  simple_iteration_method.h  test.cpp  test.txt  test1.txt
lab4-Rotation_method/: CMakeLists.txt  Rotation_method.h  test.cpp
lab5-4methods_for_nonlinear_equations/: CMakeLists.txt  methods.h  test.cpp  test.txt
lab6-systems_of_nonlinear_equations/: CMakeLists.txt  methods.h  test.cpp
lab7-Lagrange_and_Newton_interpolation/: CMakeLists.txt  interpolations.h  test.cpp
lab8-cubic_spline/: CMakeLists.txt  spline.h  test.cpp
lab9-MNK/: CMakeLists.txt  graph.h  mnk.h  test.cpp
matrix/: CMakeLists.txt  matrix.cpp  matrix.h
matrix/test/: CMakeLists.txt  test_matrix.cpp
