cmake_minimum_required(VERSION 3.25)
project(cm)

set(CMAKE_CXX_STANDARD 17)

add_subdirectory(lab1-Progonka)
add_subdirectory(lab2-Gaus)
add_subdirectory(lab3-simple_iteration_method)
add_subdirectory(lab4-Rotation_method)
add_subdirectory(lab5-4methods_for_nonlinear_equations)
add_subdirectory(lab6-systems_of_nonlinear_equations)
add_subdirectory(lab7-Lagrange_and_Newton_interpolation)
add_subdirectory(lab8-cubic_spline)
add_subdirectory(lab9-MNK)
add_subdirectory(lab10-differentiation)
add_subdirectory(lab11-integration)
add_subdirectory(matrix)
